--- a/views/giftcard.handlebars
+++ b/views/giftcard.handlebars
@@ -3,9 +3,9 @@
 <h1> {{listargiftcard.tipo}} </h1>
 
 
-<p>nome: {{listargiftcard.nome}} </p>
+<p>Nome: {{listargiftcard.nome}} </p>
 
-<p>preco:  {{listargiftcard.preco}}  </p>
+<p>Valor:  {{listargiftcard.preco}}  </p>
  
 <a href="/giftcard/edit/{{listargiftcard.id}}"> EDITAR</a>
 
