--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -10,7 +10,7 @@
           <input type="text"  name="tipo" class="form-control" id="tipo" aria-describedby="tipoHelp">          
         </div>
         <div class="mb-3">
-            <label for="preco" class="form-label">preco</label>
+            <label for="preco" class="form-label">Valor</label>
             <input type="text" name="preco" class="form-control" id="preco">
           </div>
         <button type="submit" class="btn btn-primary" >Cadastrar</button>
