--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -3,20 +3,20 @@
 
 <form action="/alterar/updategiftcard" method="POST"> 
 <div class="form control">
-    <input type="hidden" name="CNPJ" id="CNPJ" value="{{giftcard.id}}">
-    <label for="tipo">tipo</label>
+    <input type="hidden" name="id" id="id" value="{{giftcard.id}}">
+    <label for="tipo">Tipo</label>
     <input type="text" name="tipo" placeholder="Digite aqui o tipo"
      value="{{giftcard.tipo}}">
 </div>
 
 <div class="form control">
-    <label for="nome">nome</label>
+    <label for="nome">Nome</label>
     <input type="text" name="nome" placeholder="Digite aqui o nome do giftcard"
      value="{{giftcard.nome}}">
 </div>
 
 <div class="form control">
-    <label for="preco">preco</label>
+    <label for="preco">Valor</label>
     <input type="text" name="preco" placeholder="Digite aqui o preco do giftcard" 
     value="{{giftcard.preco}}">
 </div>
